--- a/1.data_pre_processing.rmd
+++ b/1.data_pre_processing.rmd
@@ -13,16 +13,15 @@ output:
     code_folding: hide
     code_download: true
     includes:
-      in_header: header.html
+      in_header: docs/header.html
 ---
-
 
 ```{r loading packages and dataset, message=FALSE, warning=FALSE}
 # The following packages might need to be installed onto your version 
 # of R prior to the running of the code below.
 
 # Package names
-packages <- c("corrplot", "tidyverse", "haven", "mice")
+packages <- c("dplyr", "haven", "mice", "tidyr")
 
 # Install packages not yet installed
 installed_packages <- packages %in% rownames(installed.packages())
@@ -33,60 +32,21 @@ if (any(installed_packages == FALSE)) {
 # Packages loading
 invisible(lapply(packages, library, character.only = TRUE))
 
-# We load the original Czech dataset (in SPSS format) from a local directory.
+# We load the international dataset (in SPSS format) from a local directory.
+# We also remove labels
 data <- zap_labels(haven::read_sav(file = "data/international_dataset.sav"))
 
 # We also try to limit the decimals to three significant figures
-options(digits = 3, scipen = 999)
+options(digits = 4, scipen = 999)
 
 ```
 
 ## Calculating PHQ8 dependent variable
 
 ```{r}
+# To get the comparability with the original scale (0-24 points), we need to deduce 1
+data$PHQ8 <- (data$Q49_1 - 1) + (data$Q49_2 - 1) + (data$Q49_3 - 1) + (data$Q49_4 - 1) + (data$Q49_5 - 1) + (data$Q49_6 - 1) + (data$Q49_7 - 1) + (data$Q49_8 - 1)
 
-data <- data %>%
-  mutate(Q49_1_rec = recode(Q49_1,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_2_rec = recode(Q49_2,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_3_rec = recode(Q49_3,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_4_rec = recode(Q49_4,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_5_rec = recode(Q49_5,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_6_rec = recode(Q49_6,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_7_rec = recode(Q49_7,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         Q49_8_rec = recode(Q49_8,
-            `1` = 0,
-            `2` = 1,
-            `3` = 2,
-            `4` = 3),
-         PHQ8 = Q49_1_rec + Q49_2_rec + Q49_3_rec + Q49_4_rec + Q49_5_rec + Q49_6_rec + Q49_7_rec + Q49_8_rec)
 ```
 
 ## Seting factor levels to be interpretable in the analysis, preserving only variables of interest
@@ -155,7 +115,7 @@ data_subset <- data %>%
             `2` = "as_before",
             `3` = "more_often",
             .ordered = TRUE),
-            q36_econ_worry = recode_factor(as_factor(Q39), # Make sure the direction is consistent!
+            q36_econ_worry = recode_factor(as_factor(Q39), 
             `1` = "very_serious",
             `2` = "serious",
             `3` = "limited",
@@ -200,23 +160,32 @@ data_subset <- data %>%
 ```
 
 ## Filtering out the Czech sample for analyses
-
 ```{r}
+# Change Do Not Know to NA's
+levels(data_subset$q20_public_info)[levels(data_subset$q20_public_info) == "do_not_know"] <- NA
+
+# Save the current dataset version, which still contains country and age group
+# This is useful for exploratory data analysis
+saveRDS(data_subset, "data/eda_dataset.rds")
+
 data_subset <- data_subset %>%
         filter(!country %in% c("CZ")) %>% 
         select(-c("country", "q02_age_group"))
 
-# Change Do Not Know to NA's
-levels(data_subset$q20_public_info)[levels(data_subset$q20_public_info) == "do_not_know"] <- NA
-
 ```
 
 ## Analysis of the missing data
-
 ```{r}
-# What proportion missing data?
+# Dataset overview
 summary(data_subset)
 
+# What proportion are the missing data? (in percent)
+(sum(is.na(data_subset)) / sum(!is.na(data_subset))) * 100
+
+# What columns are most affected by missingness (in percent)
+sort(colSums(is.na(data_subset)) / colSums(!is.na(data_subset)) * 100)
+
+# Visualize patterns of missingness
 md.pattern(data_subset)
 ```
 
@@ -229,7 +198,8 @@ data_subset_imputed <- mice(data_subset,
                             m = 5,
                             maxit = 10,
                             defaultMethod = c("pmm", "logreg", "polyreg", "polr"),
-                            seed = 4167)
+                            seed = 4167,
+                            print = FALSE)
 ```
 
 
