--- a/2.multiple_regression.rmd
+++ b/2.multiple_regression.rmd
@@ -13,16 +13,19 @@ output:
     code_folding: hide
     code_download: true
     includes:
-      in_header: header.html
+      in_header: docs/header.html
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE)
+```
 
-```{r loading packages and dataset, message=FALSE, warning=FALSE}
+```{r loading packages and dataset, message=FALSE, include=FALSE}
 # The following packages might need to be installed onto your version 
 # of R prior to the running of the code below.
 
 # Package names
-packages <- c("corrplot", "dplyr", "mice", "car", "miceadds", "fastDummies")
+packages <- c("corrplot", "dplyr", "mice", "car", "miceadds", "kableExtra")
 
 # Install packages not yet installed
 installed_packages <- packages %in% rownames(installed.packages())
@@ -34,41 +37,34 @@ if (any(installed_packages == FALSE)) {
 invisible(lapply(packages, library, character.only = TRUE))
 
 imputed_df <- readRDS("data/imputed_dataset.rds")
+imputed_df_corr <- readRDS("data/imputed_dataset_corr.rds")
 
 # We also try to limit the decimals to three significant figures
 options(digits = 3, scipen = 999)
 
 ```
 
-## Correlation plot
+# Correlation plot (Spearman, multiply imputed dataset)
 
-```{r}
-mi_cor_df <- complete(imputed_df, action = "long", include = TRUE) %>% 
-   dummy_cols(select_columns = c("q03_relationship_type", "q01_gender"), remove_selected_columns = TRUE) %>% 
-   mutate(across(everything(), ~ as.numeric(.))) %>% 
-   select(-c("q03_relationship_type_NA", "q01_gender_NA")) %>% 
-   as.mids()
-
-mi_cor <- micombine.cor(mi_cor_df, 
+```{r echo=FALSE, fig.height=9, fig.width=9}
+mi_corr <- micombine.cor(imputed_df_corr, 
               method = "spearman", 
               conf.level = 0.95)
 
 # Add significance matrix
-corrplot(attr(mi_cor,"r_matrix"), 
+corrplot(attr(mi_corr,"r_matrix"), 
          method = "circle", 
-             title = "Correlation Matrix - Spearman Coefficient", 
              type = "lower", 
              # p.mat = res1$p, 
              # sig.level = .05, 
              mar = c(0,0,1,0))
 
-
 ```
 
 
-# Stepwise regression model on multiply imputed dataset
+# Regression models (multiply imputed dataset) {.tabset .tabset-pills}
 
-```{r} 
+```{r include=FALSE}
 # outcome <- "PHQ8"
 # predictors <- c("q01_gender", "q02_age", "q04_children", "q36_econ_worry", "q18_02_soc_media", "q47_self_reporting_health", "q49_health_limitations")
 # 
@@ -115,25 +111,15 @@ corrplot(attr(mi_cor,"r_matrix"),
 #     durbin = TRUE,
 #     collin = TRUE)
 
-# Remove factor ordering for better interpretation within regression coefficients
-imputed_df <- complete(imputed_df, action = "long", include = TRUE) %>% 
-   mutate(across(where(is.ordered), ~ factor(., ordered = FALSE))) %>% 
-   as.mids()
-```
-
-
-```{r} 
-# Testing model chosen based by stepwise algoritm on its BIC score
+# Testing model chosen based by stepwise algorithm on its BIC score
 stepwise_BIC_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q02_age +
   q04_children +
   q36_econ_worry +
   q18_02_soc_media +
   q47_self_reporting_health +
-  q49_health_limitations + 0)) %>%
+  q49_health_limitations)) %>%
   pool()
-
-summary(stepwise_BIC_fit) %>% arrange(p.value)
 
 stepwise_BIC_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
@@ -142,11 +128,6 @@ stepwise_BIC_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q18_02_soc_media +
   q47_self_reporting_health +
   q49_health_limitations")
-
-stepwise_BIC_anova$r.squared
-
-stepwise_BIC_anova$anova.table %>% arrange(desc(`F value`))
-
 
 # Testing model chosen based by stepwise algoritm on its AIC score
 stepwise_AIC_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
@@ -161,10 +142,8 @@ stepwise_AIC_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q34_02_face_mask +
   q38_alcohol +
   q40_smoking +
-  q48_chronic_illness + 0)) %>%
+  q48_chronic_illness)) %>%
   pool()
-
-summary(stepwise_AIC_fit) %>% arrange(p.value)
 
 stepwise_AIC_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
@@ -180,20 +159,29 @@ stepwise_AIC_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q40_smoking +
   q48_chronic_illness")
 
-stepwise_AIC_anova$r.squared
 
-stepwise_AIC_anova$anova.table %>% arrange(desc(`F value`))
+BIC_summ <- summary(stepwise_BIC_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
+
+AIC_summ <- summary(stepwise_AIC_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
+
+BIC_summ_anv <- stepwise_BIC_anova$anova.table %>% arrange(desc(`F value`))
+AIC_summ_anv <- stepwise_AIC_anova$anova.table %>% arrange(desc(`F value`))
+
 
 ```
 
-# Theoretically-devised regression model on multiply imputed dataset
-
-```{r}
+```{r include=FALSE}
 th_1_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q02_age +
   q03_relationship_type +  
   q04_children +
-  q11_education + 0)) %>%
+  q11_education)) %>%
   pool()
 
 th_2_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
@@ -205,7 +193,7 @@ th_2_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q20_public_info +
   q34_02_face_mask +
   q34_07_hand_washing +
-  q36_econ_worry + 0)) %>%
+  q36_econ_worry)) %>%
   pool()
 
 th_3_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
@@ -222,9 +210,8 @@ th_3_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q42_sport +
   q38_alcohol +
   q35_01_contact_close_family +
-  q35_03_contact_friends + 0)) %>%
+  q35_03_contact_friends)) %>%
   pool()
-
 
 th_4_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q02_age +
@@ -243,16 +230,16 @@ th_4_fit <- with(imputed_df, lm(PHQ8 ~ q01_gender +
   q35_03_contact_friends + 
   q47_self_reporting_health +
   q48_chronic_illness +
-  q49_health_limitations + 0)) %>%
+  q49_health_limitations)) %>%
   pool()
 
-th_1_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
+th_1_anv <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
   q03_relationship_type +  
   q04_children +
   q11_education")
 
-th_2_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
+th_2_anv <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
   q03_relationship_type +  
   q04_children +
@@ -263,7 +250,7 @@ th_2_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q34_07_hand_washing +
   q36_econ_worry")
 
-th_3_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
+th_3_anv <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
   q03_relationship_type +  
   q04_children +
@@ -279,7 +266,7 @@ th_3_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q35_01_contact_close_family +
   q35_03_contact_friends")
 
-th_4_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
+th_4_anv <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q02_age +
   q03_relationship_type +  
   q04_children +
@@ -298,27 +285,118 @@ th_4_anova <- mi.anova(imputed_df, "PHQ8 ~ q01_gender +
   q48_chronic_illness +
   q49_health_limitations")
 
-summary(th_1_fit) %>% arrange(p.value)
-summary(th_2_fit) %>% arrange(p.value)
-summary(th_3_fit) %>% arrange(p.value)
-summary(th_4_fit) %>% arrange(p.value)
+th_1_summ <- summary(th_1_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
 
+th_2_summ <- summary(th_2_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
 
-th_1_anova$r.squared
-th_2_anova$r.squared
-th_3_anova$r.squared
-th_4_anova$r.squared
+th_3_summ <- summary(th_3_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
 
-th_1_anova$anova.table %>% arrange(desc(`F value`))
-th_2_anova$anova.table %>% arrange(desc(`F value`))
-th_3_anova$anova.table %>% arrange(desc(`F value`))
-th_4_anova$anova.table %>% arrange(desc(`F value`))
+th_4_summ <- summary(th_4_fit, conf.int = TRUE) %>%
+  mutate(p.adjusted = round(p.adjust(p.value, method = "holm"), 3)) %>%
+  select(-p.value) %>% 
+  arrange(desc(abs(estimate)))
+
+th_1_summ_anv <- th_1_anv$anova.table %>% arrange(desc(`F value`))
+th_2_summ_anv <- th_2_anv$anova.table %>% arrange(desc(`F value`))
+th_3_summ_anv <- th_3_anv$anova.table %>% arrange(desc(`F value`))
+th_4_summ_anv <- th_4_anv$anova.table %>% arrange(desc(`F value`))
 
 ```
 
-```{r}
-ggplot(complete(imputed_df), aes(q02_age, PHQ8, color = q11_education)) + geom_point(position = "jitter", alpha = 0.2) + geom_smooth()
+## Model fit measures
 
-# + geom_parallel_slopes(se = TRUE)
+```{r} 
+kbl(pool.r.squared(stepwise_BIC_fit), caption = "Stepwise BIC Model: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+kbl(pool.r.squared(stepwise_AIC_fit), caption = "Stepwise AIC Model: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+kbl(pool.r.squared(th_1_fit), caption = "Theory-derived Model 1: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+kbl(pool.r.squared(th_2_fit), caption = "Theory-derived Model 2: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+kbl(pool.r.squared(th_3_fit), caption = "Theory-derived Model 3: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+kbl(pool.r.squared(th_4_fit), caption = "Theory-derived Model 4: Fit Measures") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped"))
+
+```
+
+## Model coefficients
+
+```{r}
+kbl(BIC_summ, caption = "Stepwise BIC Model: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(BIC_summ$p.adjusted < 0.05), bold = TRUE)
+
+kbl(AIC_summ, caption = "Stepwise AIC Model: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(AIC_summ$p.adjusted < 0.05), bold = TRUE)
+
+kbl(th_1_summ, caption = "Theory-derived Model 1: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_1_summ$p.adjusted < 0.05), bold = TRUE)
+
+kbl(th_2_summ, caption = "Theory-derived Model 2: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_2_summ$p.adjusted < 0.05), bold = TRUE)
+
+kbl(th_3_summ, caption = "Theory-derived Model 3: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_3_summ$p.adjusted < 0.05), bold = TRUE)
+
+kbl(th_4_summ, caption = "Theory-derived Model 4: Coefficients") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_4_summ$p.adjusted < 0.05), bold = TRUE)
+
+```
+
+## Omnibus ANOVA test
+
+```{r}
+kbl(BIC_summ_anv, caption = "Stepwise BIC Model: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(BIC_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+kbl(AIC_summ_anv, caption = "Stepwise AIC Model: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(AIC_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+kbl(th_1_summ_anv, caption = "Theory-derived Model 1: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_1_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+kbl(th_2_summ_anv, caption = "Theory-derived Model 2: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_2_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+kbl(th_3_summ_anv, caption = "Theory-derived Model 3: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_3_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+kbl(th_4_summ_anv, caption = "Theory-derived Model 4: ANOVA test") %>%
+kable_classic(full_width = FALSE, lightable_options = c("striped")) %>%
+                    row_spec(row = which(th_4_summ_anv$`Pr(>F)` < 0.05), bold = TRUE)
+
+```
+
+
+```{r eval=FALSE, include=FALSE}
+# ggplot(complete(imputed_df), aes(q02_age, PHQ8, color = q11_education)) + geom_point(position = "jitter", alpha = 0.2) + geom_smooth()
+# 
+# # + geom_parallel_slopes(se = TRUE)
 ```
 
