--- a/3.clustering.rmd
+++ b/3.clustering.rmd
@@ -19,7 +19,7 @@ output:
 
 ```{r loading packages and dataset, message=FALSE, warning=FALSE}
 # Package names
-packages <- c("haven", "dplyr", "tidyr", "fpc", "NbClust", "factoextra", "cluster", "plotly", "clValid")
+packages <- c("dplyr", "tidyr", "fpc", "NbClust", "factoextra", "cluster", "clValid", "mice")
 
 # Install packages not yet installed
 installed_packages <- packages %in% rownames(installed.packages())
@@ -30,78 +30,41 @@ if (any(installed_packages == FALSE)) {
 # Packages loading
 invisible(lapply(packages, library, character.only = TRUE))
 
+imputed_df <- readRDS("data/imputed_dataset_clust.rds")
+
+```
+
+```{r}
+
+indexes <- c("frey", "mcclain", "cindex", "silhouette", "dunn")
+
+for (o in seq_len(imputed_df$m)) {
+  
+  if (file.exists("data/nr_clust.rds")) {
+    nr_clust <- readRDS("data/nr_clust.rds") 
+  } else {
+    nr_clust <- list()
+}
+  matrix_subset <- head(complete(imputed_df, o), 100)
+  
+  distance_matrix <- daisy(matrix_subset, metric = "gower")
+  
+ for (i in seq_along(indexes)) {
+  
+  set.seed(4167)
+  nr_clust[[o]][indexes[i]] <- NbClust(diss = distance_matrix, distance = NULL, min.nc = 2, method = "median", index = indexes[i])[["Best.nc"]][["Number_clusters"]]
+
+ }
+  saveRDS(nr_clust, "data/nr_clust.rds")
+}
+
+```
+
+
+
+```{r loading packages and dataset, message=FALSE, warning=FALSE}
 ### MICLUST PACKAGE IMPUTED DFs
 
-data <- data %>%
-  mutate(Q49_1_rec = recode(Q49_1,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_2_rec = recode(Q49_2,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_3_rec = recode(Q49_3,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_4_rec = recode(Q49_4,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_5_rec = recode(Q49_5,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_6_rec = recode(Q49_6,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_7_rec = recode(Q49_7,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         Q49_8_rec = recode(Q49_8,
-                            `1` = 0,
-                            `2` = 1,
-                            `3` = 2,
-                            `4` = 3),
-         PHQ8 = Q49_1_rec + Q49_2_rec + Q49_3_rec + Q49_4_rec + Q49_5_rec + Q49_6_rec + Q49_7_rec + Q49_8_rec)
-
-data_subset <- data %>%
-  filter(Q3 %in% c(1,2),
-         Country != 5,
-         Q23 != 99) %>%
-  transmute(q01_gender = if_else(Q3 == 2, 1, 0),
-            q02_age = Q4,
-            # q03_relationship = Q5,
-            # q03_single = if_else(Q5 == 1, 1, 0),
-            # q03_relationship = if_else(Q5 == 2, 1, 0),
-            # q03_married = if_else(Q5 == 3, 1, 0),
-            # q03_divorced = if_else(Q5 == 4, 1, 0),
-            # q03_widowed = if_else(Q5 == 5, 1, 0),
-            q18_02_soc_media = replace_na(Q21_2, 0),
-            q20_public_info = if_else(Q23 == 2, 1, 0),
-            q36_econ_worry = Q39,
-            q35_01_contact_close_family = Q38_1,
-            q35_03_contact_friends = Q38_3,
-            q38_alcohol = if_else(Q42 == 2, 1, 0),
-            q47_self_reporting_health = Q50,
-            q49_health_limitations = Q52,
-            PHQ8) %>%
-  na.omit() %>%
-  scale()
-
-saveRDS(data_subset, "clustering_matrix.rds")
-
-matrix_subset <- readRDS("clustering_matrix_with_rel_stat.rds")
 
 # Take a sample
 set.seed(4167)
@@ -117,12 +80,7 @@ matrix_subset <- data_subset[sample(1:nrow(data_subset), 500, replace = FALSE),]
 # Calculate the matrix of distance, we can choose from many methods
 
 distance_matrix <- get_dist(matrix_subset, method = "euclidean")
-distance_matrix <- daisy(matrix_subset,
-                         metric = "gower"
-                         # type = list(symm = c(1),
-                         #             asymm = c(3,4,8),
-                         #             ordratio = c(2,5,6,7,9,10,11))
-                         )
+
 
 fviz_dist(distance_matrix, gradient = list(low = "blue", mid = "white", high = "red"))
 
