--- a/3.clustering.rmd
+++ b/3.clustering.rmd
@@ -19,7 +19,7 @@ output:
 
 ```{r loading packages and dataset, message=FALSE, warning=FALSE}
 # Package names
-packages <- c("dplyr", "tidyr", "NbClust", "factoextra", "cluster", "clValid", "mice", "plotly")
+packages <- c("dplyr", "tidyr", "NbClust", "factoextra", "cluster", "clValid", "mice", "plotly", "viridis")
 
 # Install packages not yet installed
 installed_packages <- packages %in% rownames(installed.packages())
@@ -32,6 +32,12 @@ invisible(lapply(packages, library, character.only = TRUE))
 
 imputed_df <- readRDS("data/imputed_dataset_clust.rds")
 imputed_df_no_fct <- readRDS("data/imputed_dataset_clust_no_fct.rds")
+
+# Function to determine mode of a vector
+getmode <- function(v) {
+ uniqv <- unique(v)
+ uniqv[which.max(tabulate(match(v, uniqv)))]
+}
 
 ```
 
@@ -62,16 +68,42 @@ for (o in seq_len(imputed_df$m)) {
 }
 ```
 
+```{r}
+# Use visual methods as well - the "elbow" method
+
+eval_methods <- c("wss")
+
+for (o in seq_len(imputed_df$m)) {
+  
+  if (file.exists("data/nr_clust_viz.rds")) {
+    nr_clust <- readRDS("data/nr_clust_viz.rds") 
+  } else {
+    nr_clust <- vector(mode = "list", length = imputed_df$m)
+  }
+  
+  distance_matrix <- daisy(head(complete(imputed_df, o), 500), metric = "gower")
+  matrix_subset <- head(scale(complete(imputed_df_no_fct, o)), 500)
+  
+ for (i in seq_along(eval_methods)) {
+  
+  set.seed(4167)
+  nr_clust[[o]][[eval_methods[i]]] <- fviz_nbclust(x = matrix_subset, FUNcluster = pam, diss = distance_matrix, verbose = TRUE, method = eval_methods[i], k.max = 15)
+
+ } 
+  
+  saveRDS(nr_clust, "data/nr_clust_viz.rds")
+}
+
+```
+
+
+
 
 ```{r}
 # Two clusters as a recommended number seems to win with every imputed dataset
-# Function to determine mode of a vector
-getmode <- function(v) {
- uniqv <- unique(v)
- uniqv[which.max(tabulate(match(v, uniqv)))]
-}
 
 optimal_nr_of_clusters <- readRDS("data/nr_clust.rds") %>% bind_rows() %>% rowwise() %>% mutate(mode_of_all = getmode(c(frey, mcclain, cindex, silhouette, dunn)))
+
 ```
 
 ```{r}
@@ -79,7 +111,7 @@ optimal_nr_of_clusters <- readRDS("data/nr_clust.rds") %>% bind_rows() %>% rowwi
 list_imp_dfs <- complete(imputed_df, action = "all", include = "FALSE")
 list_imp_dfs_no_fct <- complete(imputed_df_no_fct, action = "all", include = "FALSE")
 list_cl_dfs <- vector(mode = "list", length = imputed_df$m)
-nr_clust <- 2
+nr_clust <- 14
 
 for (i in seq_len(imputed_df$m)) {
   
@@ -89,7 +121,7 @@ for (i in seq_len(imputed_df$m)) {
   set.seed(4167)
   pam_clust <- pam(distance_matrix_gower, nr_clust, diss = TRUE)
 
-list_clustered_dfs[[i]] <- list_imp_dfs_no_fct[[i]] %>%
+list_cl_dfs[[i]] <- list_imp_dfs_no_fct[[i]] %>%
   scale() %>%
   as_tibble() %>%
   bind_cols(cluster = pam_clust$clustering) %>% 
@@ -97,14 +129,16 @@ list_clustered_dfs[[i]] <- list_imp_dfs_no_fct[[i]] %>%
 
 }
 
-saveRDS(list_cl_dfs, "data/list_clustered_dfs.rds")
+saveRDS(list_cl_dfs, "data/list_clustered_dfs_14.rds")
 ```
 
 
 ```{r}
 # Pool imputed datasets together
 
-pooled_df <- tibble(variable = list_cl_dfs[[1]][[2]],
+list_cl_dfs <- readRDS("data/list_clustered_dfs.rds")
+
+pooled_df_2 <- tibble(variable = list_cl_dfs[[1]][[2]],
              value = rowMeans(cbind(list_cl_dfs[[1]][[3]], list_cl_dfs[[2]][[3]], list_cl_dfs[[3]][[3]], list_cl_dfs[[4]][[3]], list_cl_dfs[[5]][[3]])),
              cluster = tibble(df_1 = list_cl_dfs[[1]][[1]], df_2 = list_cl_dfs[[2]][[1]], df_3 = list_cl_dfs[[3]][[1]], df_4 = list_cl_dfs[[4]][[1]], df_5 = list_cl_dfs[[5]][[1]]) %>%
              rowwise() %>% 
@@ -112,25 +146,82 @@ pooled_df <- tibble(variable = list_cl_dfs[[1]][[2]],
              pull(mode_of_all)
 )
 
+list_cl_dfs <- readRDS("data/list_clustered_dfs_3.rds")
+
+pooled_df_3 <- tibble(variable = list_cl_dfs[[1]][[2]],
+             value = rowMeans(cbind(list_cl_dfs[[1]][[3]], list_cl_dfs[[2]][[3]], list_cl_dfs[[3]][[3]], list_cl_dfs[[4]][[3]], list_cl_dfs[[5]][[3]])),
+             cluster = tibble(df_1 = list_cl_dfs[[1]][[1]], df_2 = list_cl_dfs[[2]][[1]], df_3 = list_cl_dfs[[3]][[1]], df_4 = list_cl_dfs[[4]][[1]], df_5 = list_cl_dfs[[5]][[1]]) %>%
+             rowwise() %>% 
+             transmute(mode_of_all = getmode(c(df_1, df_2, df_3, df_4, df_5))) %>%
+             pull(mode_of_all)
+)
+
+list_cl_dfs <- readRDS("data/list_clustered_dfs_14.rds")
+
+pooled_df_14 <- tibble(variable = list_cl_dfs[[1]][[2]],
+             value = rowMeans(cbind(list_cl_dfs[[1]][[3]], list_cl_dfs[[2]][[3]], list_cl_dfs[[3]][[3]], list_cl_dfs[[4]][[3]], list_cl_dfs[[5]][[3]])),
+             cluster = tibble(df_1 = list_cl_dfs[[1]][[1]], df_2 = list_cl_dfs[[2]][[1]], df_3 = list_cl_dfs[[3]][[1]], df_4 = list_cl_dfs[[4]][[1]], df_5 = list_cl_dfs[[5]][[1]]) %>%
+             rowwise() %>% 
+             transmute(mode_of_all = getmode(c(df_1, df_2, df_3, df_4, df_5))) %>%
+             pull(mode_of_all)
+)
 
 ```
 
 
 ```{r, message=FALSE, warning=FALSE}
-# Cluster visualization
+# Cluster visualization for 2 clusters
 
-(ggplot(pooled_df, aes(x = variable, y = value, group = as.factor(cluster), colour = as.factor(cluster))) +
+(ggplot(pooled_df_2, aes(x = variable, y = value, group = as.factor(cluster), colour = as.factor(cluster))) +
   stat_summary(geom = "point",
                fun = mean,
                size = 3
                # aes(shape = cluster)
                ) +
   stat_summary(geom = "line", fun = mean) +
-  # scale_color_manual(values = c("#E64B35CC", "#4DBBD5CC", "#00A087CC")) +
+  scale_color_viridis(discrete = TRUE) +
   ggtitle("Average value of selected variables per cluster") +
   theme_bw() +
   ylab("relative value")) %>% ggplotly()
+
 ```
+
+```{r, message=FALSE, warning=FALSE}
+# Cluster visualization for 3 clusters
+
+(ggplot(pooled_df_3, aes(x = variable, y = value, group = as.factor(cluster), colour = as.factor(cluster))) +
+  stat_summary(geom = "point",
+               fun = mean,
+               size = 3
+               # aes(shape = cluster)
+               ) +
+  stat_summary(geom = "line", fun = mean) +
+  scale_color_viridis(discrete = TRUE) +
+  ggtitle("Average value of selected variables per cluster") +
+  theme_bw() +
+  ylab("relative value")) %>% ggplotly()
+
+```
+
+```{r, message=FALSE, warning=FALSE}
+# Cluster visualization for 3 clusters
+
+(ggplot(pooled_df_14, aes(x = variable, y = value, group = as.factor(cluster), colour = as.factor(cluster))) +
+  stat_summary(geom = "point",
+               fun = mean,
+               size = 3
+               # aes(shape = cluster)
+               ) +
+  stat_summary(geom = "line", fun = mean) +
+  scale_color_viridis(discrete = TRUE) +
+  ggtitle("Average value of selected variables per cluster") +
+  theme_bw() +
+  ylab("relative value")) %>% ggplotly()
+
+```
+
+
+
 
 
 ```{r, message=FALSE, warning=FALSE}
@@ -142,9 +233,6 @@ pooled_df <- tibble(variable = list_cl_dfs[[1]][[2]],
 # Calculate the matrix of distance, we can choose from many methods
 
 fviz_dist(distance_matrix, gradient = list(low = "blue", mid = "white", high = "red"))
-fviz_nbclust(matrix_subset, pam, method = "wss")
-fviz_nbclust(matrix_subset, pam, method = "silhouette")
-fviz_nbclust(matrix_subset, pam, method = "gap_stat")
 
 fviz_nbclust(resnumclust)
 
